--- a/src/components/TodayWeatherInfo/TodayWeatherInfo.module.css
+++ b/src/components/TodayWeatherInfo/TodayWeatherInfo.module.css
@@ -1,4 +1,10 @@
 .paper {
+  overflow-y: auto;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  padding-left: 15px;
+  padding-bottom: 20px;
   width: 300px;
   display: flex;
   flex-direction: column;
